# MARL-Intro

./: .gitignore  README.md  conda-pypi-map.json  pixi.toml  pyproject.toml
custom_cleaner/: __init__.py  env.py  fixed_generator.py
notebooks/: cleaner_torchrl_ppo_seminar.ipynb  cleaner_torchrl_ppo_student.ipynb  seminar_qmix_solved.ipynb
scripts/: cleaner_smoke.py  heuristic_cleaner_rollout.py  inspect_cleaner_observation.py  plot_cleaner_experiments.py  run_cleaner_experiments.py  torchrl_jumanji_smoke.py  train_cleaner_ppo.py
