[project]
name = "marl-intro"
version = "0.1.0"
description = "Small MARL seminar experiments and environment smoke tests."
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_cleaner"]
